New player list caching system, further refinements and fixes